<resources>
    <string name="app_name" translatable="false">Tinelix Timers</string>
    <string name="empty_list_title">There\'s nothing there</string>
    <string name="empty_list_text">But you can create at least one timer.</string>
    <string name="value">Value</string>
    <string name="name">Name</string>
    <string name="text_field_wrong_characters">This text field must not contain special characters!</string>
    <string name="main_settings_category">Main</string>
    <string name="timer_action_pref">Timer action</string>
    <string name="timer_name">Timer name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="time_edit">Time (HH:MM:SS)</string>
    <string name="date_edit">Date (YYYY-MM-DD)</string>
    <string name="invalid_elapsed_date">The specified date must be no later than today!</string>
    <string name="invalid_upcoming_date">The specified date must not be earlier than today!</string>
    <string name="invalid_format">Invalid date/time format!</string>
    <string name="time_at">%1$s at %2$s</string>
    <string name="days_counter_remaining">%1$d d. %2$d h. %3$d min. %4$d s. remaining</string>
    <string name="days_counter_elapsed">%1$d d. %2$d h. %3$d min. %4$d s. elapsed</string>
    <string name="days_counter_remaining_start_of">remaining</string>
    <string name="days_counter_elapsed_start_of">elapsed</string>
    <string name="days_counter_over">Time is over</string>
    <string name="about_application_item">About application</string>
    <string name="timer_editor_title">Timer editor</string>
    <string name="version_str">Version %1$s (%2$s)</string>
    <string name="license_info">This is free software with open source, distributed under the terms of the <a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License 3.0 (read license)</a>.\n\n<b>WITHOUT ANY WARRANTY, NOT EVEN FOR MERCHANTABILITY.</b></string>
    <string name="repo_button">Repository</string>
    <string name="copyright_str" translatable="false">Copyright © 2022 Dmitry Tretyakov (aka. Tinelix)</string>
    <string name="create_btn">Create timer</string>
    <string name="dt_parse_error">An error occurred while trying to format the date and time. Changes will not be saved.</string>
    <string name="manage_btn">Manage</string>
    <string name="delete_timer_title">Deletion confirmation</string>
    <string name="delete_timer_question">Delete timer?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="choose_timer_for_widget">You need to choose a timer from the list to create a widget.</string>
</resources>
