<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout_width="match_parent"
        android:title="@string/main_settings_category"
        android:layout="@layout/layout_pref_category">
    </PreferenceCategory>
    <Preference
        android:key="timer_name"
        android:layout="@layout/layout_pref_item"
        android:title="@string/timer_name" />
    <Preference
        android:key="timer_action"
        android:layout="@layout/layout_pref_item"
        android:title="@string/timer_action_pref" />
    <Preference
        android:key="timerActionDate"
        android:layout="@layout/layout_pref_item"
        android:title="@string/start_date" />

</PreferenceScreen>