<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/full_application_icon_72px"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/app_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LEGACY"
                    android:id="@+id/textView"
                    android:layout_marginLeft="6dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/version_str"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/license_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/license_info" />

            <TextView
                android:id="@+id/copyright_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/copyright_str" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/repo_button"
                    android:layout_width="141dp"
                    android:layout_height="40dp"
                    android:text="@string/repo_button"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/website_button"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="4dp"
                    android:text="Website"
                    android:textSize="16sp"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>