<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/empty_list_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_material_timer_black"/>

            <TextView
                android:id="@+id/empty_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_list_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/empty_list_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_list_text" />

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/timers_list"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@null"
        android:layout_margin="4dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_btn"
            android:id="@+id/create_timer_btn"
            android:layout_gravity="right"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>